force-app/main/default/objects/copadovsm__Value_Stream_Map_Configuration__c/fields/copadovsm__Type__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metrics Visibility and Order</fullName>
            </value>
            <value>
                <fullName>Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>