force-app/main/default/objects/copadovsm__Value_Stream_Map_Configuration__c/fields/copadovsm__User__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Value_Stream_Map_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>